<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz">Quiz</string>
    <string name="play_to_gain_your_knowledge">Play To Gain Your Knowledge</string>
    <string name="participate_in_quiz">Participate in quiz games related to your areas of interest. These games challenge your knowledge while providing an entertaining way to learn new facts and information.</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="answers">Answers</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_successfully_completed">You have successfully completed the quiz.</string>
    <string name="play_again">Play Again</string>
    <string name="skip">Skip</string>
</resources>